force-app/main/default/objects/ICS_Log__c/ICS_Log__c.object-meta.xml
<CustomObject>
    <label>ICS Log</label>
    <nameField>
        <displayFormat>ICSLOG-{00000000}</displayFormat>
        <label>ICS Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>