force-app/main/default/objects/ICS_Log__c/fields/LS_Contract__c.field-meta.xml
<CustomField>
    <fullName>LS_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LS Contract</label>
    <referenceTo>cllease__Lease_Account__c</referenceTo>
    <relationshipLabel>ICS Logs</relationshipLabel>
    <relationshipName>ICS_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>