force-app/main/default/objects/ICS_Log__c/fields/OK_Return_Code__c.field-meta.xml
<CustomField>
    <fullName>OK_Return_Code__c</fullName>
    <label>OK Return Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>