force-app/main/default/objects/ICS_Log__c/fields/Quick_Quote__c.field-meta.xml
<CustomField>
    <fullName>Quick_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quick Quote</label>
    <referenceTo>genesis__Quick_Quotes__c</referenceTo>
    <relationshipLabel>ICS Logs</relationshipLabel>
    <relationshipName>ICS_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>