force-app/main/default/objects/ICS_Log__c/fields/SOAPAction__c.field-meta.xml
<CustomField>
    <fullName>SOAPAction__c</fullName>
    <label>SOAPAction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>