force-app/main/default/objects/ICS_Log__c/fields/XML_Result__c.field-meta.xml
<CustomField>
    <fullName>XML_Result__c</fullName>
    <label>XML Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>